| Bug #40970 | Errors from commit blocker are not logged. | ||
|---|---|---|---|
| Submitted: | 24 Nov 2008 10:24 | Modified: | 11 Feb 4:17 |
| Reporter: | Rafal Somla | ||
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S3 (Non-critical) |
| Version: | 6.0 source | OS: | Any |
| Assigned to: | Jorgen Loland | Target Version: | 6.0-rc |
| Triage: | Triaged: D3 (Medium) | ||
[24 Nov 2008 10:24]
Rafal Somla
[1 Dec 2008 11:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/60262 2737 Jorgen Loland 2008-12-01 Bug#40970 - Errors from commit blocker are not logged. If block_commits fails, an error is now logged. unblock_commits cannot fail.
[5 Dec 2008 9:41]
Oystein Grovlen
Patch approved.
[5 Dec 2008 10:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/60694 2740 Jorgen Loland 2008-12-05 Bug#40970 - Errors from commit blocker are not logged. If block_commits fails, an error is now logged. unblock_commits cannot fail.
[5 Dec 2008 10:22]
Oystein Grovlen
Patch approved.
[5 Dec 2008 19:56]
Chuck Bell
Patch approved.
[15 Dec 2008 10:22]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/61644 2737 Jorgen Loland 2008-12-15 Bug#40970 - Errors from commit blocker are not logged. If block_commits fails, an error is now logged. unblock_commits cannot fail.
[15 Dec 2008 10:30]
Jorgen Loland
Pushed into mysql-6.0-backup Dec 15
[2 Feb 17:07]
Bugs System
Pushed into 6.0.10-alpha (revid:sergefp@mysql.com-20090202090240-dlkxhmc1asrar5rl) (version source revid:sergefp@mysql.com-20090129100938-qvke7a9krg24l8pl) (merge vers: 6.0.10-alpha) (pib:6)
[11 Feb 4:17]
Paul DuBois
Noted in 6.0.10 changelog. For BACKUP DATABASE, errors from the commit blocker were not logged.
