Bug#40970 - Errors from commit blocker are not logged.

If block_commits fails, an error is now logged. unblock_commits cannot fail.